# ai-architect-practice-arena

./: .dockerignore  .gitignore  .gitmodules  README.md  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/src/practice_arena/: main.py  questions.py
backend/tests/: test_main.py  test_questions.py
content/: rubrics.json
content/calibration/: manifest.json
docs/adr/: 0001-byok-judge-architecture.md
frontend/: package-lock.json  package.json  tsconfig.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/openai-proxy/: route.ts
frontend/app/practice/: layout.tsx
frontend/app/practice/[...questionId]/: page.tsx
frontend/lib/: MermaidDiagram.tsx  QuestionNavLink.tsx  api.ts  renderInlineMarkdown.tsx
frontend/lib/judge/: anthropicAdapter.ts  consensus.ts  openaiAdapter.ts  parseVerdict.ts  pricing.ts  prompt.ts  types.ts
frontend/lib/judge/__tests__/: consensus.test.ts  content-consistency.test.ts  pricing.test.ts
frontend/scripts/: runCalibration.ts
scripts/: build_rubrics.py
